# docs/swagger.json
@@ -173,11 +173,15 @@
             "type": "object",
             "required": [
                 "author",
+                "author_id",
                 "title"
             ],
             "properties": {
                 "author": {
                     "type": "string"
+                },
+                "author_id": {
+                    "type": "integer"
                 },
                 "title": {
                     "type": "string"
